--- a/adnextTestProject/app/src/main/res/layout/activity_adnextbanner.xml
+++ b/adnextTestProject/app/src/main/res/layout/activity_adnextbanner.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.adnexttestproject.TestActivity4">
-    <Button
-        android:id="@+id/btnInterstitialRequest"
+    tools:context="com.adnexttestproject.banner.ADNextBannerActivity">
+    <FrameLayout
+        android:id="@+id/abs"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="interstitial request" />
-</FrameLayout>
+        android:layout_alignParentBottom="true">
+    </FrameLayout>
+</LinearLayout>
