--- a/adnextTestProject/app/src/main/res/layout/activity_adnextbannerdynamic.xml
+++ b/adnextTestProject/app/src/main/res/layout/activity_adnextbannerdynamic.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/container"
-    tools:context="com.adnexttestproject.TestActivity2">
+    tools:context="com.adnexttestproject.banner.ADNextBannerDynamicActivity">
     <Button
         android:id="@+id/btn1"
         android:text="add dynamic banner"
